tests/kiama/negative/type_errors/L2/10_badfor2.ob
MODULE badfor;

TYPE
    atype = INTEGER;    

VAR
    avar : INTEGER;

BEGIN
    FOR atype := 1 TO 10 DO
        avar := 1
    END
END badfor.
